--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ body {
 /* Featured Section */
 .featured {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: flex-start;
     flex-wrap: wrap;
     gap: 10px;
@@ -111,7 +111,7 @@ body {
 /* Cards */
 .card {
     position: relative;
-    width: 100%;
+    width: 45%;
     max-width: 200px;
     text-align: center;
 }
